cgo/include/urnetwork_sdk.h

/* ContractDetailsChangeListener */
typedef void (*urnet_contract_details_change_cb)(void* user_data, const char* contract_details_json);
/* ContractStatsChangeListener */
typedef void (*urnet_contract_stats_change_cb)(void* user_data, const char* contract_stats_json);
/* PacketStatsChangeListener */
typedef void (*urnet_packet_stats_change_cb)(void* user_data, const char* packet_stats_json);
/* ProviderIdentityChangeListener */
typedef void (*urnet_provider_identity_change_cb)(void* user_data);
/* ProviderTransportSettingsChangeListener */
typedef void (*urnet_provider_transport_settings_change_cb)(void* user_data, const char* transport_settings_json);
/* ProviderTransportStatusChangeListener */
typedef void (*urnet_provider_transport_status_change_cb)(void* user_data, const char* transport_status_json);
/* RouteLocalChangeListener */
typedef void (*urnet_route_local_change_cb)(void* user_data, bool route_local);
/* TransportSettingsChangeListener */
typedef void (*urnet_transport_settings_change_cb)(void* user_data, const char* transport_settings_json);
/* TransportStatusChangeListener */
typedef void (*urnet_transport_status_change_cb)(void* user_data, const char* transport_status_json);
/* TunnelChangeListener */
typedef void (*urnet_tunnel_change_cb)(void* user_data, bool tunnel_started);
/* VpnInterfaceWhileOfflineChangeListener */
typedef void (*urnet_vpn_interface_while_offline_change_cb)(void* user_data, bool vpn_interface_while_offline);
/* WindowStatusChangeListener */
typedef void (*urnet_window_status_change_cb)(void* user_data, const char* window_status_json);
uint64_t urnet_device_add_provider_egress_contract_details_change_listener(uint64_t self, urnet_contract_details_change_cb listener_contract_details_changed, void* listener_user_data);
uint64_t urnet_device_add_provider_egress_contract_stats_change_listener(uint64_t self, urnet_contract_stats_change_cb listener_contract_stats_changed, void* listener_user_data);
uint64_t urnet_device_add_provider_identity_change_listener(uint64_t self, urnet_provider_identity_change_cb listener_provider_identities_changed, void* listener_user_data);
uint64_t urnet_device_add_provider_ingress_contract_details_change_listener(uint64_t self, urnet_contract_details_change_cb listener_contract_details_changed, void* listener_user_data);
uint64_t urnet_device_add_provider_ingress_contract_stats_change_listener(uint64_t self, urnet_contract_stats_change_cb listener_contract_stats_changed, void* listener_user_data);
uint64_t urnet_device_add_provider_packet_stats_change_listener(uint64_t self, urnet_packet_stats_change_cb listener_packet_stats_changed, void* listener_user_data);
uint64_t urnet_device_add_provider_transport_settings_change_listener(uint64_t self, urnet_provider_transport_settings_change_cb listener_provider_transport_settings_changed, void* listener_user_data);
uint64_t urnet_device_add_provider_transport_status_change_listener(uint64_t self, urnet_provider_transport_status_change_cb listener_provider_transport_status_changed, void* listener_user_data);
uint64_t urnet_device_add_route_local_change_listener(uint64_t self, urnet_route_local_change_cb listener_route_local_changed, void* listener_user_data);
uint64_t urnet_device_add_transport_settings_change_listener(uint64_t self, urnet_transport_settings_change_cb listener_transport_settings_changed, void* listener_user_data);
uint64_t urnet_device_add_transport_status_change_listener(uint64_t self, urnet_transport_status_change_cb listener_transport_status_changed, void* listener_user_data);
uint64_t urnet_device_add_tunnel_change_listener(uint64_t self, urnet_tunnel_change_cb listener_tunnel_changed, void* listener_user_data);
uint64_t urnet_device_add_vpn_interface_while_offline_change_listener(uint64_t self, urnet_vpn_interface_while_offline_change_cb listener_vpn_interface_while_offline_changed, void* listener_user_data);
uint64_t urnet_device_add_window_status_change_listener(uint64_t self, urnet_window_status_change_cb listener_window_status_changed, void* listener_user_data);
void urnet_device_cancel(uint64_t self);
void urnet_device_close(uint64_t self);
char* urnet_device_diagnostic_manifest_json(uint64_t self);
void urnet_device_flush_glog(uint64_t self);
bool urnet_device_get_allow_foreground(uint64_t self);
uint64_t urnet_device_get_api(uint64_t self);
char* urnet_device_get_block_action_overrides(uint64_t self);
char* urnet_device_get_block_actions(uint64_t self);
char* urnet_device_get_block_stats(uint64_t self);
bool urnet_device_get_blocker_enabled(uint64_t self);
bool urnet_device_get_can_prompt_intro_funnel(uint64_t self);
bool urnet_device_get_can_refer(uint64_t self);
bool urnet_device_get_can_show_rating_dialog(uint64_t self);
char* urnet_device_get_client_id(uint64_t self);
bool urnet_device_get_connect_enabled(uint64_t self);
char* urnet_device_get_connect_location(uint64_t self);
char* urnet_device_get_connected_provider_locations(uint64_t self);
char* urnet_device_get_contract_status(uint64_t self);
int64_t urnet_device_get_control_ip_family_policy(uint64_t self);
char* urnet_device_get_control_ip_family_status(uint64_t self);
char* urnet_device_get_default_location(uint64_t self);
char* urnet_device_get_dns_resolver_settings(uint64_t self);
bool urnet_device_get_done(uint64_t self);
char* urnet_device_get_egress_contract_details(uint64_t self);
char* urnet_device_get_egress_contract_stats(uint64_t self);
char* urnet_device_get_extender_status(uint64_t self);
char* urnet_device_get_ingress_contract_details(uint64_t self);
char* urnet_device_get_ingress_contract_stats(uint64_t self);
char* urnet_device_get_instance_id(uint64_t self);
char* urnet_device_get_local_override_app_ids(uint64_t self);
int64_t urnet_device_get_log_verbosity(uint64_t self);
char* urnet_device_get_network_peers(uint64_t self);
uint64_t urnet_device_get_network_space(uint64_t self);
bool urnet_device_get_offline(uint64_t self);
char* urnet_device_get_packet_stats(uint64_t self);
char* urnet_device_get_performance_profile(uint64_t self);
char* urnet_device_get_provide_control_mode(uint64_t self);
bool urnet_device_get_provide_enabled(uint64_t self);
int64_t urnet_device_get_provide_mode(uint64_t self);
char* urnet_device_get_provide_network_mode(uint64_t self);
bool urnet_device_get_provide_paused(uint64_t self);
char* urnet_device_get_provider_egress_contract_details(uint64_t self);
char* urnet_device_get_provider_egress_contract_stats(uint64_t self);
char* urnet_device_get_provider_family_transport_status(uint64_t self);
char* urnet_device_get_provider_identities(uint64_t self);
char* urnet_device_get_provider_ingress_contract_details(uint64_t self);
char* urnet_device_get_provider_ingress_contract_stats(uint64_t self);
char* urnet_device_get_provider_packet_stats(uint64_t self);
char* urnet_device_get_provider_transport_settings(uint64_t self);
char* urnet_device_get_provider_transport_status(uint64_t self);
char* urnet_device_get_public_identity_key_hash(uint64_t self);
bool urnet_device_get_route_local(uint64_t self);
bool urnet_device_get_should_show_rating_dialog(uint64_t self);
uint64_t urnet_device_get_stats(uint64_t self);
char* urnet_device_get_transport_settings(uint64_t self);
char* urnet_device_get_transport_status(uint64_t self);
bool urnet_device_get_tunnel_started(uint64_t self);
bool urnet_device_get_vpn_interface_while_offline(uint64_t self);
char* urnet_device_get_window_status(uint64_t self);
void urnet_device_init_provide_secret_keys(uint64_t self);